# word-vectors-api

./: .gitignore  README.md  mypy.ini  pyproject.toml
api/: main.py
api/router/: vectors.py
api/schemas/: response.py  vectors.py
api/services/: tokenizer.py  vectors.py
models/: jawiki-latest-pages-articles.model  jawiki-latest-pages-articles.model.syn1neg.npy  jawiki-latest-pages-articles.model.wv.vectors.npy
